# fluxcore_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/fluxcore/: config.hpp  init.cpp  init.hpp
src/fluxcore/datatypes/: abstracttype.hpp  array.cpp  array.hpp  bool.cpp  bool.hpp  byte.cpp  byte.hpp  char.cpp  char.hpp  combinedtype.hpp  float.cpp  float.hpp  int.cpp  int.hpp  primitivetype.hpp  tuple.cpp  tuple.hpp  typeregistry.cpp  typeregistry.hpp
src/fluxcore/storage/: column.cpp  column.hpp  database.cpp  database.hpp  index.hpp  table.cpp  table.hpp
src/fluxcore/storage/provider/: abstractprovider.hpp  inmemoryprovider.cpp  inmemoryprovider.hpp  segment.hpp
src/fluxfix/: flattuple.hpp
tests/: all.hpp  datatypes.cpp  fluxfix.cpp  main.cpp  storage.cpp
tests/fluxcore/: all.cpp  all.hpp  datatypes.cpp  storage.cpp
tests/fluxfix/: all.cpp  all.hpp  flattuple.cpp
